movie bug squished

--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,17 @@
   text-align:center;
 }
 
-.outline {
+.outline1 {
   border: 1px solid #C0C0C0;
   border-radius: 10px;
   margin: 5px;
   width: 300px;
   height: 100px;
+}
+
+.outline {
+  border: 1px solid #C0C0C0;
+  border-radius: 10px;
 }
 
 .left {
